changed plot dir to dish_plots
propogated change to .tex system.

--- a/dish_memo.tex
+++ b/dish_memo.tex
@@ -121,7 +121,7 @@ cases 3 and 4.
 
 \begin{figure}[!b]
 \centering
-\includegraphics[width=3in]{plots/eor_dish.png}
+\includegraphics[width=3in]{dish_plots/eor_dish.png}
 \caption{}
 \label{fig:element_dish}
 \end{figure}
@@ -160,7 +160,7 @@ For a moderate attenuation value of $A=-15$dB, we have $f<4$m.
 
 \begin{figure}
 \centering
-\includegraphics[width=4in]{plots/focal_len_vs_eff.png}
+\includegraphics[width=4in]{dish_plots/focal_len_vs_eff.png}
 \caption{Total efficiency as a function of focal length, for various diameters
 of parabolic dishes (in meters).  Choosing a fiducial focal length of $f=3.5$m,
 dish diameters of $10\le d\le 12$m yield efficiencies of $\eta\sim0.7$.}
@@ -211,6 +211,7 @@ As long as the width of the foregrounds are less than $\Delta k < 0.1$, we are
 in good shape to working in the knee. 
 
 
+\section{Construction}
 
 
 
