--- a/dish_memo.tex
+++ b/dish_memo.tex
@@ -33,8 +33,8 @@
 \vspace*{0.5cm}
 
 \section{Cost Vs. Sensitivity}
-    We weigh the cost and sensitivity benefits of the HERA antenna and array. 
-In order to accomplish this we define our figure of merit as the inverse of the 
+    We weigh the cost and sensitivity benefits of the HERA antenna and array.
+In order to accomplish this we define our figure of merit as the inverse of the
 Cost (C) times the sensitivity ($\Delta_{N}^{2}$):
 \begin{equation}
 \label{eqn:fom}
@@ -42,14 +42,16 @@ Cost (C) times the sensitivity ($\Delta_{N}^{2}$):
 \end{equation}
 The goal is to maximize the figure of merit.
 
-Our sensitivity is proportional to $k^{3}$, $N^{-1}$, $u^{\frac{1}{2}}$, and $\Omega^{\frac{5}{2}}$. $N$ is the 
-number of antennas, $u$ is the baseline length, and $\Omega$ is the beam size. Therefore, 
+Our sensitivity is proportional to $k^{3}$, $N^{-1}$, $u^{\frac{1}{2}}$, and
+$\Omega^{\frac{5}{2}}$. $N$ is the number of antennas, $u$ is the baseline
+length, and $\Omega$ is the beam size. Therefore, 
 the sensitivity goes as
 \begin{equation}
 \begin{split}
     \Delta_{N}^{2} &\propto k^{3}N^{-1}u^{\frac{1}{2}} \Omega^{\frac{5}{2}} \\
-    \Rightarrow \Delta_{N}^{2} &\propto k^{3}N^{-1} D^{\hf} (D^{-2})^{\frac{5}{4}} \\
-    \Rightarrow \Delta_{N}^{2} &\propto k^{3}N^{-1} D^{-2}\\
+    \Rightarrow \Delta_{N}^{2} &\propto k^{3}N^{-1} D^{\hf}
+(D^{-2})^{\frac{5}{4}} \\ 
+    \Rightarrow \Delta_{N}^{2} &\propto k^{3}N^{-1}D^{-2}\\
 \end{split}
 \end{equation}
 
@@ -57,8 +59,9 @@ In general, the minimum $k$ mode we can work at is
 \begin{equation}
     k_{min} = k_{H} + \Delta{k_{fg}},
 \end{equation}
-where $k_{H}$ is the $k$-mode given by the geometrical horizon limit of our baseline, and $k_{fg}$ is 
-the width of the foregrounds in $k$-space. Assuming that our antennas are placed next to each other, 
+where $k_{H}$ is the $k$-mode given by the geometrical horizon limit of our
+baseline, and $k_{fg}$ is the width of the foregrounds in $k$-space. Assuming
+that our antennas are placed next to each other, 
 \begin{equation}
 \label{eqn:k_horizon}
     k_{H} = \frac{B}{c}\frac{dk}{d\eta},
@@ -74,12 +77,12 @@ We will now look at a few limiting cases of $k$ and cost, $C$. In $k$-space our 
     \item{$k > k_{min}$.}
 \end{enumerate}
 
-The cost models are defined in terms of $C$. The total cost is proportional to 
+The cost models are defined in terms of $C$. The total cost is proportional to
 \begin{equation}
     C \propto C_{0} + C_{1}N + C_{2}N^{2}
 \end{equation}
-where $C_{0} \propto D^{0}$, $C_{1} \propto D^{2}$, and $C_{2} \propto D^{0}$, and $N$ is the number of antennas.
-The limiting cases for the cost are when
+where $C_{0} \propto D^{0}$, $C_{1} \propto D^{2}$, and $C_{2} \propto D^{0}$,
+and $N$ is the number of antennas.  The limiting cases for the cost are when
 \begin{enumerate}[label=\Alph*.]
     \item{Linearly dominated : $C \approx C_{1}N \approx D^{2}N$}
     \item{Quadratic in $N$ : $C \approx C_{2}N^{2}$}
@@ -87,35 +90,39 @@ The limiting cases for the cost are when
 \end{enumerate}
 
 \begin{table}[htdp]
-\caption{This table shows the proportionality's of the FOM as a function of the diameter ($D$) and the 
-        number of antennas $N$. Each of the numbers (top row) and letters (left column) signifies the regime
-        we are in, as given in the text.}
+\caption{This table shows the proportionality's of the FOM as a function of the
+diameter ($D$) and the number of antennas $N$. Each of the numbers (top row) and
+letters (left column) signifies the regime we are in, as given in the text.}
 \begin{center}
 \begin{tabular}{|c|c|c|c|c|}
 \hline
 &         1 &     2 &       3 &         4 \\\hline
 A &  $D^{-3}$ &  constant  & $D^{-3}$  & constant \\\hline
 B &  $D^{-1}N^{-1}$ & $N^{-1}D^{2}$ & $D^{-1}N^{-1}$ & $N^{-1}D^{2}$\\\hline
-C &  $ (DN^{-1} + D^{3} + DN)^{-1}  $  & $(N^{-1}D^{-2} + 1 + N^{-1}D^{2})$ & $(DN^{-1} + D^{3} + DN)^{-1}$ & $(N^{-1}D^{-2} + 1 + N^{-1}D^{2})$ \\
+C &  $ (DN^{-1} + D^{3} + DN)^{-1}  $  & $(N^{-1}D^{-2} + 1 + N^{-1}D^{2})$ & 
+        $(DN^{-1} + D^{3} + DN)^{-1}$ & $(N^{-1}D^{-2} + 1 + N^{-1}D^{2})$ \\
 \hline
 \end{tabular}
 \end{center}
 \label{tbl:matrix}
 \end{table}
 
-Table \ref{tbl:matrix} gives a break down of every possible scenario. It provides the FOM (in proportionality's)
-as a function of the diameter and number of elements. 
+Table \ref{tbl:matrix} gives a break down of every possible scenario. It
+provides the FOM (in proportionality's) as a function of the diameter and number
+of elements. 
 
-Now consider the case where we are in the fixed cost regime so that the figure of merit is proportional to the 
-inverse of the sensitivity. PAPER falls in the case A for costing. That is, we are linearly dominated and our 
-cost goes as $C \propto D^{2}N$. Since our cost is constant, we can vary our diameter as $N^{-\hf}$, or vary 
-the number of antennas as $D^{-2}$. If we look at the horizon dominated case, then the figure of merit says that 
-we should increase the number of antennas to get the highest sensitivity for our fixed cost. This is because, 
-$D \propto N^{-\hf} \Rightarrow N^{\frac{3}{2}}$, therefore increasing the number of antennas will maximize the 
-FOM. 
-However, if we are foreground dominated then the FOM is constant and we want to twiddle the knobs so that we have
-the $D \propto N^{-hf}$. Further discussion of this scenario is required. Note, that the scenarios repeat with 
-cases 3 and 4.
+Now consider the case where we are in the fixed cost regime so that the figure
+of merit is proportional to the inverse of the sensitivity. PAPER falls in the
+case A for costing. That is, we are linearly dominated and our cost goes as $C
+\propto D^{2}N$. Since our cost is constant, we can vary our diameter as
+$N^{-\hf}$, or vary the number of antennas as $D^{-2}$. If we look at the
+horizon dominated case, then the figure of merit says that we should increase
+the number of antennas to get the highest sensitivity for our fixed cost. This
+is because, $D \propto N^{-\hf} \Rightarrow N^{\frac{3}{2}}$, therefore
+increasing the number of antennas will maximize the FOM.  However, if we are
+foreground dominated then the FOM is constant and we want to twiddle the knobs
+so that we have the $D \propto N^{-hf}$. Further discussion of this scenario is
+required. Note, that the scenarios repeat with cases 3 and 4.
 
 \section{The Parabolic Dish}
 
