fixed textwidth to 80 (2).

--- a/dish_memo.tex
+++ b/dish_memo.tex
@@ -66,10 +66,12 @@ that our antennas are placed next to each other,
 \label{eqn:k_horizon}
     k_{H} = \frac{B}{c}\frac{dk}{d\eta},
 \end{equation}
-where $B$ is the baseline length (in our case $B$ = Diameter,$D$) and $\frac{dk}{d\eta}$ is 
-some cosmological constant of proportionality that depends on the redshift.
+where $B$ is the baseline length (in our case $B$ = Diameter,$D$) and
+$\frac{dk}{d\eta}$ is some cosmological constant of proportionality that depends
+on the redshift.
 
-We will now look at a few limiting cases of $k$ and cost, $C$. In $k$-space our cases are 
+We will now look at a few limiting cases of $k$ and cost, $C$. In $k$-space our
+cases are 
 \begin{enumerate}
     \item{$k_{H} \gg k_{fg} \Rightarrow \Delta_{N}^{2} \propto D^{1}N^{-1}$}
     \item{$k_{fg} \gg k_{H} \Rightarrow \Delta_{N}^{2} \propto D^{-2}N^{-1}$} 
