Add more to different costing/sensitivity scenarios

--- a/dish_memo.tex
+++ b/dish_memo.tex
@@ -115,16 +115,25 @@ of elements.
 
 Now consider the case where we are in the fixed cost regime so that the figure
 of merit is proportional to the inverse of the sensitivity. PAPER falls in the
-case A for costing. That is, we are linearly dominated and our cost goes as $C
-\propto D^{2}N$. Since our cost is constant, we can vary our diameter as
-$N^{-\hf}$, or vary the number of antennas as $D^{-2}$. If we look at the
-horizon dominated case, then the figure of merit says that we should increase
-the number of antennas to get the highest sensitivity for our fixed cost. This
-is because, $D \propto N^{-\hf} \Rightarrow N^{\frac{3}{2}}$, therefore
-increasing the number of antennas will maximize the FOM.  However, if we are
-foreground dominated then the FOM is constant and we want to twiddle the knobs
-so that we have the $D \propto N^{-hf}$. Further discussion of this scenario is
-required. Note, that the scenarios repeat with cases 3 and 4.
+case A, the linearly dominated regime and our cost goes as $C
+\propto D^{2}N$ (This is not quite true and the real cost is somewhere between
+constant and linearly dominated, most likely $<N^{-.5}$). Since our cost is
+constant, we can vary our diameter as $N^{-\hf}$, or vary the number of antennas
+as $D^{-2}$. If we look at the horizon dominated case, then the figure of merit
+says that we should increase the number of antennas to get the highest
+sensitivity for our fixed cost. This is because, $D \propto N^{-\hf} \Rightarrow
+N^{\frac{3}{2}}$, therefore increasing the number of antennas will maximize the
+FOM.  However, if we are foreground dominated then the FOM is constant and we
+want to twiddle the knobs so that we have the $D \propto N^{-\hf}$. Further
+discussion of this scenario is required. Note, that the scenarios repeat with
+cases 3 and 4.
+
+It is also useful to think of the scenario where we have a fixed number of
+antennas. Keeping $N$ fixed and noting that in reality the $C_{1}$ term does not
+really depend on the diameter as $D^{2}$. It is more or less constant. Hence,
+the cost is constant. Therefore, the figure of merit is proportional to
+$DN^{-1}$, which encourages us to increase the diameter of our dishes to
+maximize the FOM.
 
 \section{The Parabolic Dish}
 
