Lessons learned from first round of construction.

--- a/dish_memo.tex
+++ b/dish_memo.tex
@@ -161,7 +161,7 @@ between the primary and secondary reflector and/or the primary reflector and the
 antenna feed.  These latter waves are a consequence of the necessarily imperfect
 match of the feed electronics to the impedance of free space.
 
-To mitigate narcissistic refletions, one typically adds an attenuator or
+To mitigate narcissistic reflections, one typically adds an attenuator or
 ``splash cone'' directly below the feed.  If we posit that reflections must be
 suppressed by $-60$dB at delays corresponding to the time it takes to travel
 15m, and if we assume that reflections are attenuated by a factor $A$ for each
@@ -216,21 +216,32 @@ some room for the foreground width's. But, the problem is that we do not know
 precisely what they are. 
 
 In addition to the width of the foreground and the maximum delay of the
-baseline, narcissistic reflections add into our $k$ budget. For a 10 and 14 meter
-diameter dish we expect to have a maximum efficiency at a focal length of 3.5
-and 4.5 $m$, respectively. Nominally, we would like these reflections to be 60dB
-down upon entering the feed. Postulating that each reflection reduces the power
-by 15 dB, we need four reflections for the right signal to enter our feed. This
-corresponds to a delay of 45.9 ($k$=0.023)  and 59.0 ($k$=0.030) $ns$ for focal
-lengths of 3.5 and 4.5 meters, respectively. Therefor, our budget comes out the
-$k_{10}$ = 0.039 and $k_{14}$ = 0.053.
+baseline, narcissistic reflections add into our $k$ budget. For a 10 and 14
+meter diameter dish we expect to have a maximum efficiency at a focal length of
+3.5 and 4.5 $m$, respectively. Nominally, we would like these reflections to be
+60dB down upon entering the feed. Postulating that each reflection reduces the
+power by 15 dB, we need four reflections for the right signal to enter our feed.
+This corresponds to a delay of 45.9 ($k$=0.023)  and 59.0 ($k$=0.030) $ns$ for
+focal lengths of 3.5 and 4.5 meters, respectively. Therefore, our budget comes
+out the $k_{10}$ = 0.039 and $k_{14}$ = 0.053.
 
 As long as the width of the foregrounds are less than $\Delta k < 0.1$, we are
 in good shape to working in the knee. 
 
 
 \section{Construction}
-
+Construction of the dish began in the courtyard of HFA in Berkeley, CA.
+Some lessons that were learned from day 1 of construction :
+\begin{enumerate}
+    \item{The size of the sono-tube is set by the distance between the center of
+the walls. In order to get the spacing correct of the 16 PVC pipes around the
+tube, make sure to measure the outer diameter first.}
+    \item{Use less water in the concrete! Note that the concrete hub weighs
+about 600 pounds. Not going to move easily once made.}
+    \item{14 meters of PVC is too droopy. Creating a perfect (or near perfect)
+may be hard by just anchoring the two ends. Support is needed. See Dave's new
+design (6/7/2013).}
+\end{enumerate}
 
 
 
