focal lengths are 3.6 and 5.04 & minor addition of content

--- a/dish_memo.tex
+++ b/dish_memo.tex
@@ -201,6 +201,10 @@ toward mitigating some of the polarization leakage problems that are just on the
 horizon of being discovered with current designs.  However, without concrete
 measurements, this is largely speculation.
 
+NEED REVISION:
+For a fixed zenith parabolic prime focus dish with $\frac{f}{D} = 0.36$,
+a diameter of $10$m corresponds to a focal length of $3.60$m instead of
+$3.50$m, $5.04$m for $14$m diameter.
 
 \subsection{The Knee}
 The eor power spectrum has an upward slope for low $k$-modes which levels off
@@ -235,14 +239,24 @@ Some lessons that were learned from day 1 of construction :
 \begin{enumerate}
     \item{The size of the sono-tube is set by the distance between the center of
 the walls. In order to get the spacing correct of the 16 PVC pipes around the
-tube, make sure to measure the outer diameter first.}
+tube, make sure to measure the outer diameter and divide 16 for the arc. Since both inner
+and outer tubes were drilled with 16 holes the same way or measurement
+method before realizing the problem, the tubes fit in the first
+prototype.}
     \item{Use less water in the concrete! Note that the concrete hub weighs
 about 600 pounds. Not going to move easily once made.}
+    \item{Special care of nails on PVCs while pouring concrete.}
     \item{14 meters of PVC is too droopy. Creating a perfect (or near perfect)
 may be hard by just anchoring the two ends. Support is needed. See Dave's new
 design (6/7/2013).}
+    \item{3 Segments of all sizes of PVCs we have in hand were connecting using 2 couplers.}
 \end{enumerate}
 
+
+\section{Measurements}
+\subsection{Equipment}
+\subsubsection{Photogrammetry}
+\subsubsection{Theodolite}
 
 
 
