added notes on prototype 2

--- a/dish_memo.tex
+++ b/dish_memo.tex
@@ -202,9 +202,8 @@ horizon of being discovered with current designs.  However, without concrete
 measurements, this is largely speculation.
 
 NEED REVISION:
-For a fixed zenith parabolic prime focus dish with $\frac{f}{D} = 0.36$,
-a diameter of $10$m corresponds to a focal length of $3.60$m instead of
-$3.50$m, $5.04$m for $14$m diameter.
+A diameter of $10$m corresponds to a most efficient focal length of $3.60$m instead of
+$3.50$m, $4.5$m for $14$m diameter.
 
 \subsection{The Knee}
 The eor power spectrum has an upward slope for low $k$-modes which levels off
@@ -249,14 +248,23 @@ about 600 pounds. Not going to move easily once made.}
     \item{14 meters of PVC is too droopy. Creating a perfect (or near perfect)
 may be hard by just anchoring the two ends. Support is needed. See Dave's new
 design (6/7/2013).}
-    \item{3 Segments of all sizes of PVCs we have in hand were connecting using 2 couplers.}
+    \item{3 Segments of all sizes of PVCs we have in hand were
+      connecting using 2 couplers.}
+    \item{12 spokes, not 16 (prototype I)}
+    \item{sleeves length is 15''}
+    \item{Hub launch angle is 2.86 $^{\circ}$}
+    \item{36'' sono tube circumference: 114$\frac{7}{8}$'', 20'' sono
+      tube circumference: 64$\frac{2}{16}$, 18'' sono tube
+      circumference: 58$\frac{3}{16}$''}
+    \item{gave up the original supporting telephone pole design, using a
+    equilateral traingle design; pole to pole: 14.6m = 574.8'' = 47.9',
+    pole to center: 8.43m = 331.9'' =  27.66'}
+    \item{made 12 spokes of 288.625'', correct length should be 291.3'',
+    lost due to neglected built in coupler overlapping region}
+    \item{made 12 spokes of 218.5'', but half of them are plain on both
+      ends, half of them have bell coupler at one end}
+
 \end{enumerate}
-
-
-\section{Measurements}
-\subsection{Equipment}
-\subsubsection{Photogrammetry}
-\subsubsection{Theodolite}
 
 
 
