--- a/dish_memo.tex
+++ b/dish_memo.tex
@@ -256,7 +256,7 @@ design (6/7/2013).}
     \item{Hub launch angle is 2.86 $^{\circ}$}
     \item{36'' sono tube circumference: 114$\frac{7}{8}$'', 20'' sono
       tube circumference: 64$\frac{2}{16}$, 18'' sono tube
-      circumference: 58$\frac{3}{16}$'' blahblahblahh}
+      circumference: 58$\frac{3}{16}$''}
     \item{gave up the original supporting telephone pole design, using a
     equilateral traingle design; pole to pole: 14.6m = 574.8'' = 47.9',
     pole to center: 8.43m = 331.9'' =  27.66'}
