--- a/dish_memo.tex
+++ b/dish_memo.tex
@@ -249,11 +249,11 @@ about 600 pounds. Not going to move easily once made.}
 may be hard by just anchoring the two ends. Support is needed. See Dave's new
 design (6/7/2013).}
     \item{3 Segments of all sizes of PVCs we have in hand were
-      connecting using 2 couplers.}
+      connecting using 2 couplers sitting in HFA}
 
-    \item{12 spokes, not 16 (prototype I)}
-    \item{sleeves length is 15''}
-    \item{Hub launch angle is 2.86 $^{\circ}$}
+    \item{12 spokes + 12 supporting spars, not 16 as we previously designed with the 1st hub at HFA (vol. I)}
+    \item{sleeves length is 15'' x 24}
+    \item{Hub launch angle is 2.86 $^{\circ}$ using 18'' and 36''}
     \item{36'' sono tube circumference: 114$\frac{7}{8}$'', 20'' sono
       tube circumference: 64$\frac{2}{16}$, 18'' sono tube
       circumference: 58$\frac{3}{16}$''}
@@ -266,7 +266,5 @@ design (6/7/2013).}
       ends, half of them have bell coupler at one end}
 
 \end{enumerate}
-
-
 
 \end{document}
