--- a/construction_journal.tex
+++ b/construction_journal.tex
@@ -5,8 +5,9 @@
 \usepackage{hyperref}
 
 \begin{document}
-\title{Construction Journal}
+\title{Construction Journal} \maketitle
 This pdf includes some note on what we have been building, what are the things that came out in reality (different / as expected?).
+
 
 \section{Notes on Vol. I}
 Construction of the dish began in the courtyard of HFA in Berkeley, CA.
@@ -31,7 +32,7 @@ We are currently building the first actual thing in Carl's backyard, the first c
  
 As we started building, there are few things to note, such as distances, heights, angles, errors due to human mistakes... Ways to solve them..
 
-\begin{enumberate}
+\begin{enumerate}
     \item{12 spokes + 12 supporting spars, not 16 as we previously designed with the 1st hub at HFA (vol. I)}
     \item{sleeves length is 15'' x 24 out of 2.5'' PVC}
     \item{Hub launch angle is 2.86 $^{\circ}$ using 18'' and 36'', see Equation \ref{launchangle}}
@@ -47,7 +48,7 @@ As we started building, there are few things to note, such as distances, heights
         \end{tabular}
         \caption{The measured circumference (outer) of the sono tubes as we learned from Vol. I, it is bigger than simply $R_{listed} \times 2\pi$ \label{Tab:circum_sono}.}
       \end{table}
-
+      
     \item{gave up the original supporting telephone pole design, now employed a
     equilateral traingle design; pole to pole distance : $14.6$m = $574.8$'' = $47.9$',
     pole to center distance: $8.43$m = $331.9$'' =  $27.66$'}
@@ -65,7 +66,7 @@ where $r = 18 \pm 0.29$'' since circumference of the $36$'' hub is greater than 
 
 
 \subsection{Pole measurements \ surveying}
-We surveyed $3$ poles plus the center based on the 1st pivoted pole, we measured the angles from center to each pair of poles as listed in Table \ref{Tab:az_at_poles}. Before the 2 poles were drilld, we measured the difference in height for pairs of poles and with the center using a theodolite, plywoods, and tape measure. These numbers came out to be very encouraging, the angles were close to $120^\circ$ and the distance from each point to the other at the same horizonal level is approximately what we wanted, see Table \ref{Tab:survey_dist_b4_2_holes} for how close is close.\\
+We surveyed $3$ poles plus the center based on the 1st pivoted pole, we measured the angles from center to each pair of poles as listed in Table \ref{Tab:az_at_poles}. Before the 2 poles were drilld, we measured the difference in height for pairs of poles and with the center using a theodolite, plywoods, and tape measure. These numbers came out to be very encouraging, the angles were close to $120^\circ$ and the distance from each point to the other at the same horizonal level is approximately what we wanted, see Table \ref{Tab:survey_dist_b4_2holes} for how close is close.\\
 
 After the two holes for the poles were drilled, in order for them to be easier to fit in the hole, they were drilled $16$'' in diameter and about $37$'' in depth. There were wider than the hole for the first pole, hence harder to keep it straight up, we will use more manpower and plywood to place it in position. One problem that arises with the bigger hole: the pole is now tilted to one side, as a result the center of the pole is not concentric on the surveryed center. We can try to shift the pole to match the surveyed center or we can work around with the error resulting from that.\\
 
@@ -106,10 +107,10 @@ Pole 3 & 168$^\circ$21'0'' \\ \hline
 \centering
 \begin{tabular}{|c|c|c|} \hline
 
-Point 1 & Point 2 & \Delta angle \\ \hline
-Pole 1 & Pole 2 & 121^$\circ$58'18.5'' \\ \hline
-Pole 2 & Pole 3 & 118$^\circ$41.5'' \\ \hlane
-Pole 1 & Pole 3 &  120^$\circ$1'\\ \hline
+Point 1 & Point 2 & $\Delta$ angle \\ \hline
+Pole 1 & Pole 2 & 121$^\circ$58'18.5'' \\ \hline
+Pole 2 & Pole 3 & 118$^\circ$41.5'' \\ \hline
+Pole 1 & Pole 3 &  120$^\circ$1'\\ \hline
 
 \end{tabular}
 \caption{The difference between the azimuthal angles at each pole. \label{Tab:diff_az_poles}}
@@ -122,9 +123,9 @@ Pole 1 & Pole 3 &  120^$\circ$1'\\ \hline
 \begin{tabular}{|c|c|c|} \hline
 
 Point 1 & Point 2 & Distance \\ \hline
-Pole 1 & Pole 2 & 48'\frac{1}{4}'' \\ \hline
-Pole 1 & Center & 332'' \\ \hlne
-Pole 1 & Pole 3 & 47'\frac{2}{3}'' \\ \hline
+Pole 1 & Pole 2 & 48'$\frac{1}{4}$'' \\ \hline
+Pole 1 & Center & 332'' \\ \hline
+Pole 1 & Pole 3 & 47'$\frac{2}{3}$'' \\ \hline
 
 \end{tabular}
 \caption{The table lists the distances between poles and center before drilling the 2 holes after locating the point of same horion using a theodolite and plywood\label{Tab:survey_dist_b4_2holes}.}
@@ -136,8 +137,8 @@ Pole 1 & Pole 3 & 47'\frac{2}{3}'' \\ \hline
 \begin{tabular}{|c|c|c|} \hline
 
 Point 1 & Point 2 & Height \\ \hline
-Center & Pole 1 & 22\frac{3}{4}'' \\ \hline
-Center & Pole 2 & 4\frac{1}{4}'' \\ \hline
+Center & Pole 1 & 22$\frac{3}{4}$'' \\ \hline
+Center & Pole 2 & 4$\frac{1}{4}$'' \\ \hline
 Center & Pole 3 & 31'' \\ \hline
 
 
