changes to format

--- a/construction_journal.tex
+++ b/construction_journal.tex
@@ -1,12 +1,10 @@
 \documentclass[12pt, letter]{article}
 \special{8.5in , 11in}
 \usepackage[margin = 1in, letterpaper]{geometry}
-\usepackage{multirow}
-\usepackage{hyperref}
 
 \begin{document}
 \title{Construction Journal} \maketitle
-This pdf includes some note on what we have been building, what are the things that came out in reality (different / as expected?).
+This pdf includes some note on what we have been building, what are the things that came out in reality (is it different or is it as expected?).
 
 
 \section{Notes on Vol. I}
@@ -35,20 +33,8 @@ As we started building, there are few things to note, such as distances, heights
 \begin{enumerate}
     \item{12 spokes + 12 supporting spars, not 16 as we previously designed with the 1st hub at HFA (vol. I)}
     \item{sleeves length is 15'' x 24 out of 2.5'' PVC}
-    \item{Hub launch angle is 2.86 $^{\circ}$ using 18'' and 36'', see Equation \ref{launchangle}}
-    \item{
-      \begin{table}[!h]
-        \centering
-        \begin{tabular}{|c|c|} \hline
-          
-          Sono Tube & Measured Outer Circumference \\ \hline
-          36'' & 114$\frac{7}{8}$''  \\ \hline
-          20'' & 64$\frac{2}{16}$'' \\ \hline
-          18'' & 58$\frac{3}{16}$'' \\ \hline
-        \end{tabular}
-        \caption{The measured circumference (outer) of the sono tubes as we learned from Vol. I, it is bigger than simply $R_{listed} \times 2\pi$ \label{Tab:circum_sono}.}
-      \end{table}
-      
+    \item{Hub launch angle is 2.86 $^{\circ}$ using 18'' and 36'', see Equation \ref{
+launchangle}}
     \item{gave up the original supporting telephone pole design, now employed a
     equilateral traingle design; pole to pole distance : $14.6$m = $574.8$'' = $47.9$',
     pole to center distance: $8.43$m = $331.9$'' =  $27.66$'}
@@ -58,6 +44,18 @@ As we started building, there are few things to note, such as distances, heights
       ends, half of them have bell coupler at one end}
 \end{enumerate}
 
+\begin{table}[!h]
+  \centering
+  \begin{tabular}{|c|c|} \hline
+    
+    Sono Tube & Measured Outer Circumference \\ \hline
+    36'' & 114$\frac{7}{8}$''  \\ \hline
+    20'' & 64$\frac{2}{16}$'' \\ \hline
+    18'' & 58$\frac{3}{16}$'' \\ \hline
+  \end{tabular}
+  \caption{The measured circumference (outer) of the sono tubes as we learned from Vol. I, it is bigger than simply $R_{listed} \times 2\pi$ \label{Tab:circum_sono}.}
+\end{table}
+
 \begin{equation}
 \theta = \arctan{\frac{r}{2f}} 
 \label{launchangle}
@@ -65,10 +63,10 @@ As we started building, there are few things to note, such as distances, heights
 where $r = 18 \pm 0.29$'' since circumference of the $36$'' hub is greater than $36 * 2 *\pi$(overall hub radius) and $f = 4.5$m
 
 
-\subsection{Pole measurements \ surveying}
-We surveyed $3$ poles plus the center based on the 1st pivoted pole, we measured the angles from center to each pair of poles as listed in Table \ref{Tab:az_at_poles}. Before the 2 poles were drilld, we measured the difference in height for pairs of poles and with the center using a theodolite, plywoods, and tape measure. These numbers came out to be very encouraging, the angles were close to $120^\circ$ and the distance from each point to the other at the same horizonal level is approximately what we wanted, see Table \ref{Tab:survey_dist_b4_2holes} for how close is close.\\
+\subsection{Pole measurements and surveying}
+We surveyed $3$ poles plus the center based on the 1st pivoted pole, we measured the angles from center to each pair of poles as listed in Table \ref{Tab:az_at_poles}. Before the 2 poles were drilld, we measured the difference in height for pairs of poles and with the center using a theodolite, 2x4, and tape measure. These numbers came out to be very encouraging, the angles were close to $120^\circ$ and the distance from each point to the other at the same horizonal level is approximately what we wanted, see Table \ref{Tab:survey_dist_b4_2holes} for how close is close.\\
 
-After the two holes for the poles were drilled, in order for them to be easier to fit in the hole, they were drilled $16$'' in diameter and about $37$'' in depth. There were wider than the hole for the first pole, hence harder to keep it straight up, we will use more manpower and plywood to place it in position. One problem that arises with the bigger hole: the pole is now tilted to one side, as a result the center of the pole is not concentric on the surveryed center. We can try to shift the pole to match the surveyed center or we can work around with the error resulting from that.\\
+After the two holes for the poles were drilled, in order for them to be easier to fit in the hole, they were drilled $16$'' in diameter and about $37$'' in depth. There were wider than the hole for the first pole, hence harder to keep it straight up, we will use more manpower and 2x4 / 2x6 to place it in position. One problem that arises with the bigger hole: the pole is now tilted to one side, as a result the center of the pole is not concentric on the surveryed center. We can try to shift the pole to match the surveyed center or we can work around with the error resulting from that.\\
 
 A method that Zaki and I was using when we pivoted the first pole (these poles do not have same radius at all heights):
 \begin{enumerate}
@@ -146,4 +144,5 @@ Center & Pole 3 & 31'' \\ \hline
 \caption{The table lists the height between poles and center before drilling the 2 holes, i.e. how slanted from pole to pole\label{Tab:h_diff_pole}.}
 \end{table}
 
+As we continue to pivoting the 2 poles, we shifted them to the center of the holes. 
 \end{document}
