added new measurements after we have a finalized center, and a nicely made jig

--- a/construction_journal.tex
+++ b/construction_journal.tex
@@ -80,9 +80,9 @@ To deal with the slanted center for the hub, that part of the ground is craved /
 
 
 The survey points in the table is defined as:
-Pole 1 = the very first pivot pole, hand drilled hole
-Pole 2 = The highest pole near the fence
-Pole 3 = the pole closes to the shed, near where our cars park \\ 
+Pole 1 = the very first pivot pole, hand drilled hole; 
+Pole 2 = The highest pole near the fence; 
+Pole 3 = the pole closes to the shed, near where our cars park.
  
 
 \begin{table}[!h]
@@ -126,11 +126,11 @@ Pole 1 & Center & 332'' \\ \hline
 Pole 1 & Pole 3 & 47'$\frac{2}{3}$'' \\ \hline
 
 \end{tabular}
-\caption{The table lists the distances between poles and center before drilling the 2 holes after locating the point of same horion using a theodolite and plywood\label{Tab:survey_dist_b4_2holes}.}
+\caption{The table lists the distances between poles and center before drilling the 2 holes after locating the point of same horion using a theodolite and 2X4s \label{Tab:survey_dist_b4_2holes}.}
 \end{table}
 
 
-‹\begin{table}[!h]
+\begin{table}[!h]
 \centering
 \begin{tabular}{|c|c|c|} \hline
 
@@ -144,5 +144,39 @@ Center & Pole 3 & 31'' \\ \hline
 \caption{The table lists the height between poles and center before drilling the 2 holes, i.e. how slanted from pole to pole\label{Tab:h_diff_pole}.}
 \end{table}
 
-As we continue to pivoting the 2 poles, we shifted them to the center of the holes. 
+As we continue to pivoting the 2 poles, we shifted them to the center of the holes (as close as possible). The central point was re-surveyed using ratchets, strings and springs. 
+
+We measured the pole to pole distance after the center is finalized and the circumference of the poles at the same height that we measured using the theodolite (where strings were connected at during center re-surveying).
+The measurements are shown in Table \ref{Tab:dist_p2p} and \ref{Tab:cir_pole} respectively, the pole names are defined at the beginning of this section. 
+
+\begin{table}[!h]
+\centering
+\begin{tabular}{|c|c|c|} \hline
+
+Point 1 & Point 2 & Distance [Feet] \\ \hline
+Pole 1 & Pole 2 & 47.1 \\ \hline
+Pole 2 & Pole 3 & 47.4 \\ \hline
+Pole 1 & Pole 3 & 46.9 \\ \hline
+
+
+\end{tabular}
+\caption{The table lists the distances between poles after we finalized the center. \label{Tab:dist_p2p}}
+\end{table}
+
+\begin{table}[!h]
+\centering
+\begin{tabular}{|c|c|} \hline
+
+Pole &  Circumference[Feet] \\ \hline
+Pole 1 &  2.35 \\ \hline
+Pole 2 & 2.00 \\ \hline
+Pole 3 & 1.94\\ \hline
+
+
+\end{tabular}
+\caption{The table lists the circumference of each pole at a specific height that we used to re-survey the center. \label{Tab:cir_pole}}
+\end{table}
+
+We also drilled holes on all the sleeves for the nails (used as a stopper to fix the PVC spokes), after putting in the nails, $\approx 2.5"$ of the sleeves are exposed on the exterior of the hub. 
+
 \end{document}
