2 nails in each sleeves, hub construction note

--- a/construction_journal.tex
+++ b/construction_journal.tex
@@ -178,5 +178,7 @@ Pole 3 & 1.94\\ \hline
 \end{table}
 
 We also drilled holes on all the sleeves for the nails (used as a stopper to fix the PVC spokes), after putting in the nails, $\approx 2.5"$ of the sleeves are exposed on the exterior of the hub. 
+Since the length of the spars were mistakenly cut previously, to accomodate that, we added one nail on each sleeve $3\frac{3}{4}$" from the exterior hub. The central hub is leveled using 
+a jig, to preserve the launch angle designed on the hub, we learn that whole measurements should made with respect to the top of the hub.  
 
 \end{document}
