added rim motion to adjust by eyeballing through the theodolite

--- a/construction_journal.tex
+++ b/construction_journal.tex
@@ -75,6 +75,7 @@ A method that Zaki and I was using when we pivoted the first pole (these poles d
 \item{fix a string connecting two screws}
 \item{setup the theodolite pointing to the string and move the viewer vertically to check if string lines up with black vertical crosshair line}
 \item{Jiggle the pole around and make the last step work}
+\end{enumerate}
 
 To deal with the slanted center for the hub, that part of the ground is craved / flattened. As a result, the center is now only an estimate to the previous surveyed rebarred point. What we can do perhaps is to figure the center after pivoting all 3 poles since the holes are drilled, there isn't a lot of room for adjustments at the poles. \\
 
@@ -180,5 +181,27 @@ Pole 3 & 1.94\\ \hline
 We also drilled holes on all the sleeves for the nails (used as a stopper to fix the PVC spokes), after putting in the nails, $\approx 2.5"$ of the sleeves are exposed on the exterior of the hub. 
 Since the length of the spars were mistakenly cut previously, to accomodate that, we added one nail on each sleeve $3\frac{3}{4}$" from the exterior hub. The central hub is leveled using 
 a jig, to preserve the launch angle designed on the hub, we learn that whole measurements should made with respect to the top of the hub.  
+
+\subsection{Rim}
+After the rim is put up, we set up a theodolite and compared the top part of the horizontal 2x4s level-ness (2 on each pole / post). Table \ref{Tab:motion_rim} (Below) is a table showing the motion (by approximation) each plate needs to go for consistency in all. Pole $1$, $2$, $3$ are referring to the same poles mentioned in previous section, each 4x4 counting counter-clockwise from the corresponding rightmost telephone pole is named a,b,c.
+
+\begin{table}[!h]
+\centering
+\begin{tabular}{|c|c|c|c|c|c|c|} \hline
+Pole \# / Post \# & Right & Direction & Distance shift &Left & Direction & Distance shift\\ \hline
+1a & R & up & 1.0 * w & L & up & .75 * w \\ \hline
+1b & R & up &  .5 * w & L & up & .3 * w \\ \hline
+1c & R & up & .75 * w & L & up & .5 * w \\ \hline
+2 & R & up & .5 * w & L & up & .3 * w \\ \hline
+2a & R & up & 1.5 * w & L & up & 1.8 * w \\ \hline
+2b & R & up & 2.0 * w & L & up & 2.0 * w \\ \hline
+2c & R & up & .3 * w & L & up & .3 * w \\ \hline
+3 & R & up & 1.0 * s & L & up & 1.5 * s \\ \hline
+3a & R & N/A & N/A & L & down & 1.0 * s \\ \hline 
+3b & R & down & 1.2 * w & L & down & 1.2 * w \\ \hline
+3c & R & down & .5 * w & L & down & .5 * w \\ \hline
+\end{tabular}
+\caption{These motions are with respect to pole 1 which both the left and the right plates are aligned. 'w' is defined as the width of a 2x4; 's' is defined as the screw size. \label{Tab:motion_rim}}
+\end{table}
 
 \end{document}
