removed construction section in dish_memo.tex

--- a/dish_memo.tex
+++ b/dish_memo.tex
@@ -233,38 +233,6 @@ in good shape to working in the knee.
 
 
 \section{Construction}
-Construction of the dish began in the courtyard of HFA in Berkeley, CA.
-Some lessons that were learned from day 1 of construction :
-\begin{enumerate}
-    \item{The size of the sono-tube is set by the distance between the center of
-the walls. In order to get the spacing correct of the 16 PVC pipes around the
-tube, make sure to measure the outer diameter and divide 16 for the arc. Since both inner
-and outer tubes were drilled with 16 holes the same way or measurement
-method before realizing the problem, the tubes fit in the first
-prototype.}
-    \item{Use less water in the concrete! Note that the concrete hub weighs
-about 600 pounds. Not going to move easily once made.}
-    \item{Special care of nails on PVCs while pouring concrete.}
-    \item{14 meters of PVC is too droopy. Creating a perfect (or near perfect)
-may be hard by just anchoring the two ends. Support is needed. See Dave's new
-design (6/7/2013).}
-    \item{3 Segments of all sizes of PVCs we have in hand were
-      connecting using 2 couplers sitting in HFA}
-
-    \item{12 spokes + 12 supporting spars, not 16 as we previously designed with the 1st hub at HFA (vol. I)}
-    \item{sleeves length is 15'' x 24}
-    \item{Hub launch angle is 2.86 $^{\circ}$ using 18'' and 36''}
-    \item{36'' sono tube circumference: 114$\frac{7}{8}$'', 20'' sono
-      tube circumference: 64$\frac{2}{16}$, 18'' sono tube
-      circumference: 58$\frac{3}{16}$''}
-    \item{gave up the original supporting telephone pole design, using a
-    equilateral traingle design; pole to pole: 14.6m = 574.8'' = 47.9',
-    pole to center: 8.43m = 331.9'' =  27.66'}
-    \item{made 12 spokes of 288.625'', correct length should be 291.3'',
-    lost due to neglected built in coupler overlapping region}
-    \item{made 12 spokes of 218.5'', but half of them are plain on both
-      ends, half of them have bell coupler at one end}
-
-\end{enumerate}
+See contruction_journal.tex
 
 \end{document}
